ENH: talks added

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -150,17 +150,17 @@
 
           <tr>
             <td>9:45 --- 10:00</td>
-            <td>Talk 1</td>
+            <td>Talk 1. Mixing Crowd and Algorithm Efforts to Segment Objects in Biomedical Images. <br>Danna Gurari*, University of Texas at Austin; Mehrnoosh Sameki,  Boston University; Zheng Wu, Mathworks; Margrit Betke, Boston University</td>
           </tr>
 
           <tr>
             <td>10:00 --- 10:15</td>
-            <td>Talk 2</td>
+            <td>Talk 2. FastDRaW – Fast Delineation by Random Walker: application to large images. <br>Houssem-Eddine Gueziri*, École de technologie supérieure; Lina Lakhdar, ENSEIRB-MATMECA; Michael McGuffin, École de technologie supérieure; Catherine Laporte, Ecole de technologie superieure</td>
           </tr>
 
           <tr>
             <td>10:15 --- 10:30</td>
-            <td>Talk 3</td>
+            <td>Talk 3. Intuitive and Accurate Patient-Specific Coronary Tree Modeling from Cardiac Computed-Tomography Angiography. <br>Michael Wels*, Siemens Healthcare; Félix Lades, ISO-Gruppe; Christian Hopfgartner, ISO-Gruppe; Chris Schwemmer, Siemens Healthcare; Michael Suehling, Siemens Healthcare</td>
           </tr>
 
           <tr>
@@ -180,12 +180,12 @@
 
           <tr>
             <td>12:30 --- 12:45</td>
-            <td>Talk 4</td>
+            <td>Talk 4. Highly Modular Multi-Platform Development Environment for Automated Segmentation and Just Enough Interaction. <br>Honghai Zhang*, Satyananda Kashyap, Andreas Wahle, Milan Sonka; The University of Iowa</td>
           </tr>
 
           <tr>
             <td>12:45 --- 13:00</td>
-            <td>Talk 5</td>
+            <td>Talk 5. PRISM: An open source framework for the interactive design of GPU volume rendering shaders<br> Simon Drouin*, Montreal Neurological Institute; Louis Collins, McGill</td>
           </tr>
 
           <tr>
@@ -200,32 +200,32 @@
 
           <tr>
             <td>14:30 --- 14:45</td>
-            <td>Talk 6</td>
+            <td>Talk 6. Just-Enough Interaction Approach to Knee MRI Segmentation: Data from the Osteoarthritis Initiative<br>Satyananda Kashyap*, Honghai Zhang, Milan Sonka, The University of Iowa</td>
           </tr>
 
           <tr>
             <td>14:45 --- 15:00</td>
-            <td>Talk 7</td>
+            <td>Talk 7. Interactive Tracking of Cells in Microscopy Image Sequences<br>Mattia Gentil*, Boston University; Mehrnoosh Sameki,  Boston University; Danna Gurari, University of Texas at Austin; Elham Saraee, Boston University; Erik Hasenberg, Boston University; Joyce Y. Wong, Boston University; Margrit Betke, Boston University</td>
           </tr>
 
           <tr>
             <td>15:00 --- 15:15</td>
-            <td>Talk 8</td>
+            <td>Talk 8. iVR: A User Steerable and Interactive Direct Volume Rendering<br> Cheng Chang*, Yi Gao, Stony Brook University</td>
           </tr>
 
           <tr>
             <td>15:15 --- 15:30</td>
-            <td>Talk 9</td>
+            <td>Talk 9. A Software Application for Interactive Medical Image Segmentation with Active User Guidance<br>Jens Petersen*, German Cancer Research Center (DKFZ); Martin Bendszus, Heidelberg University Hospital; Jürgen Debus, Heidelberg University Hospital; Sabine Heiland, Heidelberg University Hospital; Klaus H. Maier-Hein, German Cancer Research Center (DKFZ)</td>
           </tr>
 
           <tr>
             <td>15:30 --- 15:45</td>
-            <td>Talk 10</td>
+            <td>Talk 10. Cervical Range of Motion Measurement using MARG Low-Cost Sensors<br>David  García-Mato*, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Eugenio Marinetto, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Rocío López, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Mónica García-Sevilla, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón   ; Manuel Desco, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Javier Pascau, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón</td>
           </tr>
 
           <tr>
             <td>15:45 --- 16:00</td>
-            <td>Talk 11</td>
+            <td>Talk 11. Smart Brush for Tumor Segmentation  by Boundary Detection using Local Intensity Information. <br>Ka Hei Lok*, The Chinese University of Hong Kong; Lin Shi, Department of Medicine and Therapeutics, The Chinese University of Hong Kong; Defang Wang, The Chinese University of Hong Kong; Xian Lun Zhu, Department of Surgery, The Chinese University of Hong Kong</td>
           </tr>
 
           <tr>
