--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -105,7 +105,33 @@
         <a href="../imic2015/index.html">IMIC2015</a>
       </h3>
 
-      <h3><a name="schedule"></a>Planned Schedule (will fill in the tile of each talk)</h3>
+      <h3>IMIC workshop --- a call for Demos</h3>
+
+      We would like to invite you to actively participate at the Interactive Medical Image Computing (IMIC) Workshop by giving a live demo of your work.  IMIC is to be held in Athenes, on Monday Oct 17 , in conjunction with MICCAI 2016.
+
+      We received many excellent paper submissions and plan to publish the full program very soon.  While the deadline for manuscript submission to the IMIC has passed, there is still an opportunity to take part at the workshop and present your work in demo form.
+
+      The IMIC workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection and tracking.
+
+      The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.
+
+      Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox.
+
+      Submissions will be handled in an ongoing basis. We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is October 1, 2016  but please note that we may reach the number of demos we can accommodate earlier.
+
+      More details can be found in: http://interactivemedical.org/imic2016/
+
+
+      We look forward to seeing you at the IMIC
+
+      The IMIC Organizers
+      Tammy Riklin Raviv
+      Tina Kapur
+      Steve Pieper
+      Yi Gao
+      Bjoern Menze
+
+      <h3><a name="schedule"></a>Planned Schedule</h3>
 
       <style>
         table {
