STYLE: remove 2nd call for demo, remove author affiliation

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -176,17 +176,17 @@
 
           <tr>
             <td>9:45 --- 10:00</td>
-            <td>Talk 1. Mixing Crowd and Algorithm Efforts to Segment Objects in Biomedical Images. <br>Danna Gurari*, University of Texas at Austin; Mehrnoosh Sameki,  Boston University; Zheng Wu, Mathworks; Margrit Betke, Boston University</td>
+            <td>Talk 1. Mixing Crowd and Algorithm Efforts to Segment Objects in Biomedical Images. <br>Danna Gurari*, Mehrnoosh Sameki, Zheng Wu, Margrit Betke</td>
           </tr>
 
           <tr>
             <td>10:00 --- 10:15</td>
-            <td>Talk 2. FastDRaW – Fast Delineation by Random Walker: application to large images. <br>Houssem-Eddine Gueziri*, École de technologie supérieure; Lina Lakhdar, ENSEIRB-MATMECA; Michael McGuffin, École de technologie supérieure; Catherine Laporte, Ecole de technologie superieure</td>
+            <td>Talk 2. FastDRaW – Fast Delineation by Random Walker: application to large images. <br>Houssem-Eddine Gueziri*, Lina Lakhdar, Michael McGuffin, Catherine Laporte</td>
           </tr>
 
           <tr>
             <td>10:15 --- 10:30</td>
-            <td>Talk 3. Intuitive and Accurate Patient-Specific Coronary Tree Modeling from Cardiac Computed-Tomography Angiography. <br>Michael Wels*, Siemens Healthcare; Félix Lades, ISO-Gruppe; Christian Hopfgartner, ISO-Gruppe; Chris Schwemmer, Siemens Healthcare; Michael Suehling, Siemens Healthcare</td>
+            <td>Talk 3. Intuitive and Accurate Patient-Specific Coronary Tree Modeling from Cardiac Computed-Tomography Angiography. <br>Michael Wels*, Félix Lades, Christian Hopfgartner, Chris Schwemmer, Michael Suehling</td>
           </tr>
 
           <tr>
@@ -206,12 +206,12 @@
 
           <tr>
             <td>12:30 --- 12:45</td>
-            <td>Talk 4. Highly Modular Multi-Platform Development Environment for Automated Segmentation and Just Enough Interaction. <br>Honghai Zhang*, Satyananda Kashyap, Andreas Wahle, Milan Sonka; The University of Iowa</td>
+            <td>Talk 4. Highly Modular Multi-Platform Development Environment for Automated Segmentation and Just Enough Interaction. <br>Honghai Zhang*, Satyananda Kashyap, Andreas Wahle, Milan Sonka</td>
           </tr>
 
           <tr>
             <td>12:45 --- 13:00</td>
-            <td>Talk 5. PRISM: An open source framework for the interactive design of GPU volume rendering shaders<br> Simon Drouin*, Montreal Neurological Institute; Louis Collins, McGill</td>
+            <td>Talk 5. PRISM: An open source framework for the interactive design of GPU volume rendering shaders<br> Simon Drouin*, Louis Collins</td>
           </tr>
 
           <tr>
@@ -226,32 +226,32 @@
 
           <tr>
             <td>14:30 --- 14:45</td>
-            <td>Talk 6. Just-Enough Interaction Approach to Knee MRI Segmentation: Data from the Osteoarthritis Initiative<br>Satyananda Kashyap*, Honghai Zhang, Milan Sonka, The University of Iowa</td>
+            <td>Talk 6. Just-Enough Interaction Approach to Knee MRI Segmentation: Data from the Osteoarthritis Initiative<br>Satyananda Kashyap*, Honghai Zhang, Milan Sonka</td>
           </tr>
 
           <tr>
             <td>14:45 --- 15:00</td>
-            <td>Talk 7. Interactive Tracking of Cells in Microscopy Image Sequences<br>Mattia Gentil*, Boston University; Mehrnoosh Sameki,  Boston University; Danna Gurari, University of Texas at Austin; Elham Saraee, Boston University; Erik Hasenberg, Boston University; Joyce Y. Wong, Boston University; Margrit Betke, Boston University</td>
+            <td>Talk 7. Interactive Tracking of Cells in Microscopy Image Sequences<br>Mattia Gentil*, Mehrnoosh Sameki, Danna Gurari, Elham Saraee, Erik Hasenberg, Y. Wong, Margrit Betke</td>
           </tr>
 
           <tr>
             <td>15:00 --- 15:15</td>
-            <td>Talk 8. iVR: A User Steerable and Interactive Direct Volume Rendering<br> Cheng Chang*, Yi Gao, Stony Brook University</td>
+            <td>Talk 8. iVR: A User Steerable and Interactive Direct Volume Rendering<br> Cheng Chang*, Yi Gao</td>
           </tr>
 
           <tr>
             <td>15:15 --- 15:30</td>
-            <td>Talk 9. A Software Application for Interactive Medical Image Segmentation with Active User Guidance<br>Jens Petersen*, German Cancer Research Center (DKFZ); Martin Bendszus, Heidelberg University Hospital; Jürgen Debus, Heidelberg University Hospital; Sabine Heiland, Heidelberg University Hospital; Klaus H. Maier-Hein, German Cancer Research Center (DKFZ)</td>
+            <td>Talk 9. A Software Application for Interactive Medical Image Segmentation with Active User Guidance<br>Jens Petersen*, Martin Bendszus, Jürgen Debus, Sabine Heiland, Klaus H. Maier-Hein</td>
           </tr>
 
           <tr>
             <td>15:30 --- 15:45</td>
-            <td>Talk 10. Cervical Range of Motion Measurement using MARG Low-Cost Sensors<br>David  García-Mato*, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Eugenio Marinetto, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Rocío López, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Mónica García-Sevilla, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón   ; Manuel Desco, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón; Javier Pascau, Department of Bioengineering and Aerospace Engineering, Universidad Carlos III de Madrid; Instituto de Investigación Sanitaria Gregorio Marañón</td>
+            <td>Talk 10. Cervical Range of Motion Measurement using MARG Low-Cost Sensors<br>David  García-Mato*, Eugenio Marinetto, Rocío López, Mónica García-Sevilla, Manuel Desco, Javier Pascau</td>
           </tr>
 
           <tr>
             <td>15:45 --- 16:00</td>
-            <td>Talk 11. Smart Brush for Tumor Segmentation  by Boundary Detection using Local Intensity Information. <br>Ka Hei Lok*, The Chinese University of Hong Kong; Lin Shi, Department of Medicine and Therapeutics, The Chinese University of Hong Kong; Defang Wang, The Chinese University of Hong Kong; Xian Lun Zhu, Department of Surgery, The Chinese University of Hong Kong</td>
+            <td>Talk 11. Smart Brush for Tumor Segmentation  by Boundary Detection using Local Intensity Information. <br>Ka Hei Lok*, Lin Shi, Defang Wang, Xian Lun Zhu</td>
           </tr>
 
           <tr>
@@ -277,38 +277,6 @@
         </tbody>
       </table>
 
-
-
-
-      <ul>
-
-
-      </ul>
-
-      <h3>A call for Demos</h3>
-      <p>We would like to invite you to actively participate at the Interactive Medical Image Computing (IMIC) Workshop by giving a live demo of your work.  IMIC is to be held in Athenes, on Monday Oct 17 , in conjunction with MICCAI 2016.</p>
-
-      <p>We received many excellent paper submissions and plan to publish the full program very soon.  While the deadline for manuscript submission to the IMIC has passed, there is still an opportunity to take part at the workshop and present your work in demo form.</p>
-
-      <p>The IMIC workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection and tracking. </p>
-
-      <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
-
-<p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox.</p>
-
-<p>Submissions will be handled in an ongoing basis. We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is October 1, 2016  but please note that we may reach the number of demos we can accommodate earlier.</p>
-
-<p>More details can be found through <a href="http://interactivemedical.org/imic2016/">this link</a>.</p>
-
-<p>We look forward to seeing you at the IMIC</p>
-
-<p>The IMIC Organizers<br/>
-  Tammy Riklin Raviv<br/>
-  Tina Kapur<br/>
-  Steve Pieper<br/>
-  Yi Gao<br/>
-  Bjoern Menze<br/></p>
-</ol>
 
 <h3>Keynote speakers</h3>
 <ul>
