talk change to Sandy

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -201,7 +201,7 @@
 
           <tr>
             <td>12:00 --- 12:30</td>
-            <td>Plenary talk II "Mass Spectrometry for Image-Guided Surgery", Dr. Natalie Agar</td>
+            <td>Plenary talk II Title TBD, Dr. William M. Wells III</td>
           </tr>
 
           <tr>
@@ -285,11 +285,10 @@
   <p>Image Guided Therapy</p>
   <p>Department of Radiology Brigham and Women's Hospital</p>
   <p>Harvard Medical School</p>
-  <li><strong>Nathalie Agar, PhD</strong></li>
-  <p>Director, Surgical Molecular Imaging Laboratory</p>
-  <p>Department of Neurosurgery, Brigham and Women's Hospital</p>
-  <p>Instructor of Surgery</p>
-  <p>Harvard Medical School</p>
+  <li><strong>William M. Wells III (aka Sandy Wells), PhD</strong></li>
+  <p>Professor of Radiology</p>
+  <p>Department of Radiology</p>
+  <p>Harvard Medical School and Brigham and Women's Hospital</p>
   <li><strong>Leo Joskowicz, PhD</strong></li>
   <p>Professor, Director</p>
   <p>CASMIP Lab: Computer-Aided Surgery and Medical Image Processing Laboratory</p>
