Emphasize the plenary talks and add titles

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -132,7 +132,7 @@
       Yi Gao
       Bjoern Menze
 -->
-      <h3><a name="schedule"></a>Planned Schedule</h3>
+      <h3><a name="schedule"></a>Schedule</h3>
 
       <style>
         table {
@@ -170,10 +170,10 @@
             <td>Welcoming comments</td>
           </tr>
 
-          <tr>
+          <tr><strong>
             <td>9:05 --- 9:45</td>
-            <td>Plenary talk I, Dr. Tina Kapur </td>
-          </tr>
+            <td>Plenary talk I, "Image-Guided Therapy in AMIGO: Interventions are Interactive", Dr. Tina Kapur </td>
+            </strong></tr>
 
           <tr>
             <td>9:45 --- 10:00</td>
@@ -200,10 +200,10 @@
             <td>Demo session I</td>
           </tr>
 
-          <tr>
+          <tr><strong>
             <td>12:00 --- 12:30</td>
-            <td>Plenary talk II Title TBD, Dr. William M. Wells III</td>
-          </tr>
+            <td>Plenary talk II: "Uncertainty in Medical Image Computing and Opportunities for Interactive Guidance", Dr. William M. Wells III</td>
+            </strong></tr>
 
           <tr>
             <td>12:30 --- 12:45</td>
@@ -270,10 +270,10 @@
             <td>10 minutes break to count votes for best demo prize -- in the meantime people can watch everyones demos on screen and have an online voting</td>
           </tr>
 
-          <tr>
+          <tr><strong>
             <td>17:25</td>
             <td>Concluding comments, announcement of award winner</td>
-          </tr>
+            </strong></tr>
 
         </tbody>
       </table>
