independent section for speakers

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -134,6 +134,14 @@
 -->
       <h3><a name="schedule"></a>Schedule</h3>
 
+      <h4>Plenary Talks</h4>
+      <ul>
+        <li><b>9:05: Tina Kapur</b></li>
+        <li><b>12:00: Sandy Wells</b></li>
+        <li><b>14:00 Leo Joskowicz</b></li>
+      </ul>
+      
+      <h4>Full Schedule</h4>
       <style>
         table {
         width:100%;
