Make Leo Prof not Dr

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -230,7 +230,7 @@
 
           <tr><b>
             <td>14:00 --- 14:30</td>
-            <td>Plenary talk III "Segmentation uncertainty and error estimation without  ground truth: a framework", Dr. Leo Joskowicz</td>
+            <td>Plenary talk III "Segmentation uncertainty and error estimation without  ground truth: a framework", Prof. Leo Joskowicz</td>
             </b></tr>
 
           <tr>
